HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/FoundationalClassNameReserved/Expected.uv
//! Expected diagnostic metadata for the FoundationalClassNameReserved rejected-source specimen.

expectedDiagnostic("E-MOD-1304", "req.14.FoundationalClassesSyntaxAndReservedNames")
